--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Easybank landing page</title>
 
@@ -14,47 +18,98 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
-
-  Home
+<body> 
+  <!-- Home
   About
   Contact
   Blog
   Careers
 
-  Request Invite
+  Request Invite -->
+    <header>
+      <div class="mobile-navigatio">
+        <div class="nav-header">
+          <img src="images/logo.svg" alt="Logo">
+<div class="hamburger-menu"></div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="background">
+          <img src="images/image-mockups.png" alt="Bank app mockups">
+        </div>
+        <div class="container">
+          <h1 class="title"> Next generation digital banking</h1>
+          <p class="sub-title">
+            Take your financial life online. Your Easybank account will be a one-stop-shop 
+            for spending, saving, budgeting, investing, and much more.
+          </p>
+          <a href="#" class="btn">Request Invite</a>
+        </div>
+      </section>
+      <section>
+        <div class="why__container">
+          <h2 class="page__subtitle">Why choose Easybank?</h2>
+          <p>
+            We leverage Open Banking to turn your bank account into your financial hub. Control 
+            your finances like never before.</p>
+        </div>
+
+        <div class="quality__container">
+          <img src="images/icon-online.svg" alt="">
+          <h3>  Online Banking</h3>
+          <p>Our modern web and mobile applications allow you to keep track of your finances 
+            wherever you are in the world.</p>
+        </div>
+        <div class="quality__container">
+          <img src="images/icon-budgeting.svg" alt="">
+          <h3>Simple Budgeting</h3>
+          <p>See exactly where your money goes each month. Receive notifications when you’re 
+            close to hitting your limits.</p>
+        </div>
+        <div class="quality__container">
+          <img src="images/icon-onboarding.svg" alt="">
+          <h3>Fast Onboarding</h3>
+          <p>  We don’t do branches. Open your account in minutes online and start taking control 
+            of your finances right away.</p>
+        </div>
+        <div class="quality__container">
+          <img src="images/icon-api.svg" alt="">
+          <h3>
+            Open API</h3>
+          <p>  Manage your savings, investments, pension, and much more from one account. Tracking 
+            your money has never been easier.</p>
+        </div>
+      </section>
+      
+    </main>
+
+ 
 
 
 
-  Next generation digital banking
+ 
 
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
+  
 
-  Request Invite
-
+  
 
 
-  Why choose Easybank?
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
+  
 
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
 
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
 
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
+  
 
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
+  
+  
+
+  
+
+
+
 
   
 
