feat: worked on the mobile and web designs of the feature sections

--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -48,7 +48,8 @@
           <a href="#" class="btn">Request Invite</a>
         </div>
       </section>
-      <section>
+      <section class="features__section">
+        <div class="overall__container row">
         <div class="why__container">
           <h2 class="page__subtitle">Why choose Easybank?</h2>
           <p>
@@ -56,6 +57,7 @@
             your finances like never before.</p>
         </div>
 
+        <div class="qualities">
         <div class="quality__container">
           <img src="images/icon-online.svg" alt="">
           <h3>  Online Banking</h3>
@@ -76,11 +78,12 @@
         </div>
         <div class="quality__container">
           <img src="images/icon-api.svg" alt="">
-          <h3>
-            Open API</h3>
-          <p>  Manage your savings, investments, pension, and much more from one account. Tracking 
+          <h3>Open API</h3>
+          <p>Manage your savings, investments, pension, and much more from one account. Tracking 
             your money has never been easier.</p>
         </div>
+      </div>
+      </div>
       </section>
 
       <section>
