feat: worked on the mobile navigation ui

--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -27,17 +27,17 @@
 
   Request Invite -->
     <header>
-      <div class="mobile-navigatio">
+      <div class="mobile-navigation">
         <div class="nav-header">
-          <img src="images/logo.svg" alt="Logo">
-<div class="hamburger-menu"></div>
+          <img  class ="logo" src="images/logo.svg" alt="Logo">
+<img class="hamburger-menu" src="images/icon-hamburger.svg" alt="mobile menu">
         </div>
       </div>
     </header>
     <main>
       <section>
         <div class="background">
-          <img src="images/image-mockups.png" alt="Bank app mockups">
+          <img class="mockup-img" src="images/image-mockups.png" alt="Bank app mockups">
         </div>
         <div class="container">
           <h1 class="title"> Next generation digital banking</h1>
@@ -45,7 +45,7 @@
             Take your financial life online. Your Easybank account will be a one-stop-shop 
             for spending, saving, budgeting, investing, and much more.
           </p>
-          <a href="#" class="btn">Request Invite</a>
+          <a href="#" class="btn spacing">Request Invite</a>
         </div>
       </section>
       <section class="features__section">
