feat: reworked on the footer. finsihed both mobile and desktop version styling

--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -13,10 +13,7 @@
   <title>Frontend Mentor | Easybank landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
 </head>
 <body> 
   <!-- Home
@@ -86,9 +83,10 @@
       </div>
       </section>
 
-      <section>
+      <section class="articles">
+        <h2 class="page__subtitle"> Latest Articles</h2>
+
         <div class="article__container">
-          <h2 class="page__subtitle"> Latest Articles</h2>
          
           <article>
             <div class="article__card">
@@ -139,57 +137,56 @@
     </main>
 
  
-<footer class="footer__container">
-  <!-- Bank Logo -->
-  <img src="images/logo.svg" alt="Logo">
-
-  <!-- Social media handles -->
-  <div class="social-handles__container">
-  <div class="social-handles">
-    <img class="social--links" src="images/icon-facebook.svg" alt="facebook icon">
-    <img class="social--links" src="images/icon-youtube.svg" alt="youtube icon">
-    <img class="social--links" src="images/icon-twitter.svg" alt="twitter icon">
-    <img class="social--links" src="images/icon-pinterest.svg" alt="Pinterest icon">
-    <img class="social--links" src="images/icon-instagram.svg" alt="instagram icon">
-  </div>
-</div>
-
-  <!-- Navigation links -->
-  <div class="footer__nav">
-    <ul class="footer__list">
-      <li class="footer__item">
-        <a href="#">About Us</a>
-      </li>
-      <li class="footer__item">
-       <a href="#"> Contact</a>
-      </li>
-      <li class="footer__item">
-     <a href="#">Blog</a>
-      </li>
-      <li class="footer__item">
-       <a href="#">Careers</a>
-      </li>
-      <li class="footer__item">
-    <a href="#">Support</a>
-      </li>
-      <li class="footer__item">
-        <a href="#">Privacy Policy</a>
-      </li>
-    </ul>
-  </div>
-
-  <!-- invite button -->
-  <div class="btn__container">
-    <a href="#" class="btn">Request Invite</a>
-  </div>
+<footer class="footer__section">
+  <div class="footer__container footer__row">
+    <div class="footer__col">
+     <a href="#0" class="footer__logo"> <img src="images/white.svg" alt="Logo"></a>
+      <div class="social-handles">
+        <img class="social--links" src="images/icon-facebook.svg" alt="facebook icon">
+        <img class="social--links" src="images/icon-youtube.svg" alt="youtube icon">
+        <img class="social--links" src="images/icon-twitter.svg" alt="twitter icon">
+        <img class="social--links" src="images/icon-pinterest.svg" alt="Pinterest icon">
+        <img class="social--links" src="images/icon-instagram.svg" alt="instagram icon">
+      </div>
+    </div>
   
+    <div class="footer__col">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#">About Us</a>
+        </li>
+        <li class="footer__item">
+         <a href="#"> Contact</a>
+        </li>
+        <li class="footer__item">
+       <a href="#">Blog</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__col">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#">Careers</a>
+         </li>
+         <li class="footer__item">
+       <a href="#">Support</a>
+         </li>
+         <li class="footer__item">
+           <a href="#">Privacy Policy</a>
+         </li>
+      </ul>
+    </div>
+    <div class="footer__col rights__container">
+      <a href="#0" class="btn">Request Invite</a>
+      <p class="rights">© Easybank. All Rights Reserved</p>
 
-  <!-- Rights resevered -->
-  <p class="rights">© Easybank. All Rights Reserved</p>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Jinet Atieno</a>.
+    </div>
   </div>
 </footer>
 </body>
 </html>
+
+<!-- <div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Jinet Atieno</a>.
+</div> -->
